# Valeo-Embedded-Linux-Academy

./: README.md
CMake Task/: CMake Task.md
CMake Task/project_dir/: CMakeLists.txt
CMake Task/project_dir/include/: Print.hpp  WriteInFile.hpp
CMake Task/project_dir/src/: Print.cpp  main.cpp
File Handler/: CMakeLists.txt  File_handler.cpp  File_handler.hpp  Requester.cpp  Requester.hpp  readme.txt  shmem.hpp  simpleLogger.rar
File Handler/simpleLogger/: simpleLogger.cpp
File Handler/tests/: CMakeLists.txt  Requester_functions.cpp  Requester_functions.hpp  requester_test.cpp  test.cpp
Makefile task/: Makefile  Makefile Task.md  head.cpp  main.cpp
Shared Libraries Task/: Libraries Task.md  main.c  mathlib.c  mathlib.h  statical_link  test
Task 1/: Task 1.md  script.sh
Task 2/: Task 2.md  backup.service  backup.timer  data_backup.sh
Task 3/: Task 3.md  network.sh
multi_service_application/: CMakeLists.txt  Video_Link  readme.txt  readmefirst.txt
multi_service_application/Cross_compilation/: tool_chain.cmake
multi_service_application/Sytemd_service_file/: logger.service
multi_service_application/config_lib/: config.txt
multi_service_application/ipc_lib/: CMakeLists.txt  ipc_lib.cpp  ipc_lib.hpp
multi_service_application/logger_receiver/: server.cpp
multi_service_application/logs/: run_logs.txt  run_logs.txt00000  run_logs.txt00001  run_logs.txt00002  run_logs.txt00003
multi_service_application/math_app/: math_app.cpp  math_app.hpp
multi_service_application/raspberry_pi_part/: CMakeLists.txt  hello.cpp  readme.txt
multi_service_application/raspberry_pi_part/Cross_compilation/: Notes.md  tool_chain.cmake
multi_service_application/raspberry_pi_part/Sytemd_service_file/: readme.txt
multi_service_application/raspberry_pi_part/ipc_lib/: CMakeLists.txt  ipc_lib.cpp
multi_service_application/raspberry_pi_part/logger_receiver/: server.cpp
multi_service_application/raspberry_pi_part/logs/: run_logs.txt
multi_service_application/raspberry_pi_part/math_app/: math_app.cpp
multi_service_application/raspberry_pi_part/simple_logger/: config_parsing.hpp  simpleLogger.h
multi_service_application/raspberry_pi_part/sockets_lib/: CMakeLists.txt  sockets.hpp
multi_service_application/simple_logger/: CMakeLists.txt  config_parsing.hpp  simpleLogger.cpp  simpleLogger.h
multi_service_application/sockets_lib/: sockets.cpp  sockets.hpp
multi_service_application/ubuntu_part/: readme.txt
multi_service_application/ubuntu_part/ipc_lib/: ipc_lib.hpp
multi_service_application/ubuntu_part/simple_logger/: config_parsing.cpp  simpleLogger.cpp
multi_service_application/ubuntu_part/sockets_lib/: sockets.cpp
